project/stage/testing/lexical/parse_tests/tests/reject/bad_statements/bad_expr_w_parentheses/in_compound_assignment.ul
void m() {
    id [(exp]= expr;
}
